# edb-lp-selan

./: LICENSE  README.md
EDB1-TRAB01-implementando-algoritmos-de-busca/: README.md  descricao.md
EDB1-TRAB01-implementando-algoritmos-de-busca/data/: BINIT.txt  BINREC.txt  LINIT.txt  LP1_graficos.ipynb
EDB1-TRAB01-implementando-algoritmos-de-busca/source/: CMakeLists.txt
EDB1-TRAB01-implementando-algoritmos-de-busca/source/src/: searching.cpp  searching.h  timing_template.cpp
EDB1-TRAB02-analise-algoritmos-ordenacao/: README.md
EDB1-TRAB02-analise-algoritmos-ordenacao/source/: main.cpp
EDB1-TRAB02-analise-algoritmos-ordenacao/source/lib/: sorting.h
LP1-TRAB02-lista-funcoes-template-sobre-ranges/: README.md  autor.md  oi.md
LP1-TRAB02-lista-funcoes-template-sobre-ranges/rotate/: README.md
LP1-TRAB03-projeto-keno/: README.md  a  author.md
LP1-TRAB03-projeto-keno/source/: CHANGELOG.md  CMakeLists.txt
LP1-TRAB03-projeto-keno/source/core/: keno_bet.cpp  keno_bet.h  keno_common.h  main.cpp
LP1-TRAB04-bar-chart-race/: README.md
LP1-TRAB04-bar-chart-race/lib/: common.cpp  common.h  text_color.h
LP1-TRAB04-bar-chart-race/scr/: barchart_race.cpp  bcr  dataframe.cpp  dataframe.h  game_manager.cpp  game_manager.h  run.sh
LP1-TRAB05-projeto-bares/: README.md  a  author.md  b
LP1-TRAB05-projeto-bares/EBNF_basic/: CHANGELOG.md  README.md
LP1-TRAB05-projeto-bares/EBNF_basic/source/: CMakeLists.txt
LP1-TRAB05-projeto-bares/EBNF_basic/source/core/: calc.cpp  calc.h  common.h  main.cpp  parser.cpp  parser.h  token.h
(+7 files in other folders)
